--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "drivelyph",
   "version": "0.1.0",
+  "homepage": "https://github.com/joshbaje/Drively",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
@@ -8,6 +9,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
@@ -18,7 +20,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
