--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drivelyph",
   "version": "0.1.0",
-  "homepage": "https://github.com/joshbaje/Drively",
+  "homepage": "https://joshbaje.github.io/Drively",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
