--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,16 @@
 REACT_APP_SUPABASE_URL=https://your-project-url.supabase.co
 REACT_APP_SUPABASE_ANON_KEY=your-anon-key
 
+# API Configuration
+REACT_APP_API_PROVIDER=supabase
+
 # Feature Flags
 REACT_APP_ENABLE_ANALYTICS=true
 REACT_APP_ENABLE_NOTIFICATIONS=true
 
 # Other Settings
 REACT_APP_MAX_UPLOAD_SIZE=5242880  # 5MB in bytes
+
+# Debug Settings
+REACT_APP_DEBUG_MODE=false
+REACT_APP_VERBOSE_LOGGING=false
